--- a/website/index.html
+++ b/website/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Leet Quantum Terminal Pro - Prediction Markets Analytics</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Leet Terminal - Prediction Markets Analytics</title>
   <link
     href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600;700&family=Inter:wght@400;500;600;700&display=swap"
     rel="stylesheet"
